--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva & Samuel</title>
-
+    
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Great+Vibes&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
 
     <style>
@@ -23,13 +23,18 @@
             overflow: hidden;
         }
 
+        /* Photo de fond avec zoom et position relevée */
         .background-hero {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('bisous.JPG') no-repeat center center;
+            background: url('bisous.JPG') no-repeat;
+            /* background-position: center 20% remonte la photo pour voir les visages */
+            background-position: center 20%; 
+            /* scale(1.1) applique le zoom */
+            transform: scale(1.1);
             background-size: cover;
             z-index: 1;
         }
@@ -40,7 +45,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0, 0.35); 
             z-index: 2;
         }
 
@@ -54,50 +59,52 @@
             justify-content: center;
             text-align: center;
             color: white;
+            padding: 0 20px; /* Padding pour le responsive mobile */
         }
 
         .names {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(4rem, 15vw, 8rem);
+            font-size: clamp(3.5rem, 12vw, 7.5rem);
             color: var(--rose-signature);
             margin: 0;
-            text-shadow: 2px 2px 15px rgba(0,0,0,0.4);
+            text-shadow: 2px 2px 15px rgba(0,0,0,0.5);
         }
 
-        /* Nouvelle police pour la date */
         .date-text {
             font-family: 'Cinzel', serif;
-            font-size: 1.4rem;
-            letter-spacing: 8px;
+            font-size: clamp(1rem, 4vw, 1.4rem);
+            letter-spacing: clamp(4px, 1.5vw, 8px);
             text-transform: uppercase;
-            margin: 20px 0 40px 0;
+            margin: 15px 0 35px 0;
             font-weight: 500;
-            color: #fff;
         }
 
+        /* Compteur Responsive */
         .countdown {
             display: flex;
-            gap: clamp(15px, 5vw, 40px);
-            margin-bottom: 60px;
+            gap: clamp(10px, 4vw, 35px);
+            margin-bottom: 50px;
+            flex-wrap: wrap; /* Permet de passer à la ligne si trop petit */
+            justify-content: center;
         }
 
         .unit {
             display: flex;
             flex-direction: column;
-            min-width: 60px;
+            min-width: 55px;
         }
 
         .unit span {
             font-family: 'Cinzel', serif;
-            font-size: clamp(1.8rem, 5vw, 2.8rem);
+            font-size: clamp(1.5rem, 6vw, 2.5rem);
             font-weight: 400;
         }
 
         .unit label {
-            font-size: 0.6rem;
+            font-size: clamp(0.5rem, 2vw, 0.6rem);
             text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-top: 8px;
+            letter-spacing: 2px;
+            margin-top: 5px;
             color: var(--rose-signature);
         }
 
@@ -105,9 +112,9 @@
             background: none;
             border: 1px solid var(--white-soft);
             color: white;
-            padding: 18px 60px;
-            font-size: 0.7rem;
-            letter-spacing: 5px;
+            padding: clamp(12px, 3vw, 18px) clamp(30px, 8vw, 60px);
+            font-size: clamp(0.6rem, 2vw, 0.75rem);
+            letter-spacing: 4px;
             text-transform: uppercase;
             cursor: pointer;
             transition: all 0.4s ease;
@@ -118,57 +125,69 @@
         .next-btn:hover {
             background: var(--white-soft);
             color: #333;
-            letter-spacing: 8px;
+            letter-spacing: 6px;
+        }
+
+        /* Ajustements spécifiques pour les petits mobiles */
+        @media (max-width: 380px) {
+            .countdown { gap: 10px; }
+            .names { font-size: 3rem; }
         }
     </style>
 </head>
 <body>
 
-<div class="background-hero"></div>
-<div class="overlay"></div>
+    <div class="background-hero"></div>
+    <div class="overlay"></div>
 
-<div class="main-container">
-    <h1 class="names">Eva & Samuel</h1>
-    <p class="date-text">11 Mai 2026</p>
+    <div class="main-container">
+        <h1 class="names">Eva & Samuel</h1>
+        <p class="date-text">11 Mai 2026</p>
 
-    <div class="countdown">
-        <div class="unit"><span id="days">00</span><label>Jours</label></div>
-        <div class="unit"><span id="hours">00</span><label>Heures</label></div>
-        <div class="unit"><span id="mins">00</span><label>Min</label></div>
-        <div class="unit"><span id="secs">00</span><label>Sec</label></div>
+        <div class="countdown">
+            <div class="unit"><span id="days">00</span><label>Jours</label></div>
+            <div class="unit"><span id="hours">00</span><label>Heures</label></div>
+            <div class="unit"><span id="mins">00</span><label>Min</label></div>
+            <div class="unit"><span id="secs">00</span><label>Sec</label></div>
+        </div>
+
+        <button class="next-btn" onclick="nextStep()">Entrer</button>
     </div>
 
-    <button class="next-btn" onclick="nextStep()">Entrer</button>
-</div>
+    <script>
+        const weddingDate = new Date("May 11, 2026 15:00:00").getTime();
 
-<script>
-    const weddingDate = new Date("May 11, 2026 15:00:00").getTime();
+        function update() {
+            const now = new Date().getTime();
+            const diff = weddingDate - now;
 
-    function update() {
-        const now = new Date().getTime();
-        const diff = weddingDate - now;
+            if (diff < 0) {
+                document.getElementById("days").innerText = "00";
+                // ...
+                return;
+            }
 
-        const d = Math.floor(diff / (1000 * 60 * 60 * 24));
-        const h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-        const s = Math.floor((diff % (1000 * 60)) / 1000);
+            const d = Math.floor(diff / (1000 * 60 * 60 * 24));
+            const h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+            const s = Math.floor((diff % (1000 * 60)) / 1000);
 
-        document.getElementById("days").innerText = d.toString().padStart(2, '0');
-        document.getElementById("hours").innerText = h.toString().padStart(2, '0');
-        document.getElementById("mins").innerText = m.toString().padStart(2, '0');
-        document.getElementById("secs").innerText = s.toString().padStart(2, '0');
-    }
+            document.getElementById("days").innerText = d.toString().padStart(2, '0');
+            document.getElementById("hours").innerText = h.toString().padStart(2, '0');
+            document.getElementById("mins").innerText = m.toString().padStart(2, '0');
+            document.getElementById("secs").innerText = s.toString().padStart(2, '0');
+        }
 
-    setInterval(update, 1000);
-    update();
+        setInterval(update, 1000);
+        update();
 
-    function nextStep() {
-        document.querySelector('.main-container').style.opacity = '0';
-        document.querySelector('.main-container').style.transition = '1s';
-        setTimeout(() => {
-            alert("Ouverture de l'invitation...");
-        }, 1000);
-    }
-</script>
+        function nextStep() {
+            document.querySelector('.main-container').style.opacity = '0';
+            document.querySelector('.main-container').style.transition = '0.8s';
+            setTimeout(() => {
+                alert("Ouverture de la suite...");
+            }, 800);
+        }
+    </script>
 </body>
 </html>
