--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         :root {
             --rose-signature: #e2b4b4;
+            --rose-pale: rgba(226, 180, 180, 0.2); /* Rose pâle pour les carrés */
             --white-soft: rgba(255, 255, 255, 0.9);
         }
 
@@ -23,7 +24,6 @@
             overflow: hidden;
         }
 
-        /* Photo de fond avec zoom et position relevée */
         .background-hero {
             position: fixed;
             top: 0;
@@ -31,9 +31,7 @@
             width: 100%;
             height: 100%;
             background: url('bisous.JPG') no-repeat;
-            /* background-position: center 20% remonte la photo pour voir les visages */
             background-position: center 20%; 
-            /* scale(1.1) applique le zoom */
             transform: scale(1.1);
             background-size: cover;
             z-index: 1;
@@ -59,7 +57,7 @@
             justify-content: center;
             text-align: center;
             color: white;
-            padding: 0 20px; /* Padding pour le responsive mobile */
+            padding: 0 20px;
         }
 
         .names {
@@ -79,33 +77,42 @@
             font-weight: 500;
         }
 
-        /* Compteur Responsive */
+        /* Conteneur du décompte */
         .countdown {
             display: flex;
-            gap: clamp(10px, 4vw, 35px);
+            gap: clamp(10px, 3vw, 25px);
             margin-bottom: 50px;
-            flex-wrap: wrap; /* Permet de passer à la ligne si trop petit */
             justify-content: center;
         }
 
+        /* Style des petits carrés */
         .unit {
             display: flex;
             flex-direction: column;
-            min-width: 55px;
+            align-items: center;
+            justify-content: center;
+            background: var(--rose-pale); /* Fond rose pâle */
+            border: 1px solid rgba(226, 180, 180, 0.4); /* Bordure rose discrète */
+            width: clamp(70px, 18vw, 90px);
+            height: clamp(70px, 18vw, 90px);
+            border-radius: 8px; /* Légèrement arrondi pour le style */
+            backdrop-filter: blur(4px); /* Effet de flou derrière le carré */
         }
 
         .unit span {
             font-family: 'Cinzel', serif;
-            font-size: clamp(1.5rem, 6vw, 2.5rem);
+            font-size: clamp(1.4rem, 5vw, 2.2rem);
             font-weight: 400;
+            line-height: 1;
         }
 
         .unit label {
-            font-size: clamp(0.5rem, 2vw, 0.6rem);
+            font-size: clamp(0.45rem, 1.5vw, 0.55rem);
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
             margin-top: 5px;
-            color: var(--rose-signature);
+            color: white;
+            opacity: 0.9;
         }
 
         .next-btn {
@@ -119,19 +126,12 @@
             cursor: pointer;
             transition: all 0.4s ease;
             border-radius: 2px;
-            backdrop-filter: blur(2px);
         }
 
         .next-btn:hover {
             background: var(--white-soft);
             color: #333;
             letter-spacing: 6px;
-        }
-
-        /* Ajustements spécifiques pour les petits mobiles */
-        @media (max-width: 380px) {
-            .countdown { gap: 10px; }
-            .names { font-size: 3rem; }
         }
     </style>
 </head>
@@ -160,12 +160,6 @@
         function update() {
             const now = new Date().getTime();
             const diff = weddingDate - now;
-
-            if (diff < 0) {
-                document.getElementById("days").innerText = "00";
-                // ...
-                return;
-            }
 
             const d = Math.floor(diff / (1000 * 60 * 60 * 24));
             const h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
