--- a/index.html
+++ b/index.html
@@ -3,199 +3,253 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eva & Samuel</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <title>Invitation - Eva & Samuel</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Great+Vibes&display=swap" rel="stylesheet">
 
     <style>
         :root {
-            --rose-signature: #e2b4b4;
-            --rose-pale: rgba(226, 180, 180, 0.25);
-            --white-soft: rgba(255, 255, 255, 0.95);
+            --rose-prestige: #d4a5a5;
+            --white-cream: #fffdf9;
+            --text-gray: #5a5a5a;
+            --text-dark: #333333;
+            --line-color: rgba(212, 165, 165, 0.3);
         }
 
         body, html {
             margin: 0;
             padding: 0;
-            height: 100%;
-            width: 100%;
+            background-color: var(--white-cream);
             font-family: 'Cormorant Garamond', serif;
-            background-color: #000;
-            overflow: hidden;
+            color: var(--text-dark);
+            scroll-behavior: smooth;
         }
 
-        .background-hero {
+        /* --- ÉLÉMENTS FLORAUX AU PREMIER PLAN --- */
+        .bg-flower-left {
+            position: fixed;
+            top: 5%;
+            left: -30px;
+            width: clamp(150px, 25vw, 300px);
+            opacity: 0.6; /* Augmenté pour être bien visible */
+            z-index: 2000; /* Passe devant tout, même la navbar */
+            pointer-events: none; /* Permet de cliquer sur les boutons en dessous */
+        }
+
+        .bg-flower-right {
+            position: fixed;
+            bottom: 5%;
+            right: -30px;
+            width: clamp(180px, 30vw, 350px);
+            opacity: 0.5; /* Augmenté */
+            z-index: 2000;
+            pointer-events: none;
+            transform: rotate(-10deg);
+        }
+
+        /* Barre de Navigation */
+        .navbar {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            background: url('bisous.JPG') no-repeat;
-            background-position: center 20%; 
-            transform: scale(1.1);
-            background-size: cover;
-            z-index: 1;
+            height: 80px;
+            background-color: rgba(255, 253, 249, 0.98);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            border-bottom: 1px solid var(--line-color);
         }
 
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.35); 
-            z-index: 2;
+        .nav-links {
+            display: flex;
+            gap: clamp(10px, 3vw, 30px);
+            list-style: none;
+            margin: 0;
+            padding: 0;
         }
 
-        .main-container {
-            position: relative;
-            z-index: 10;
-            height: 100vh;
+        .nav-links a {
+            text-decoration: none;
+            color: var(--text-gray);
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 0.75rem;
+            transition: 0.3s;
+        }
+
+        .nav-links a:hover { color: var(--rose-prestige); }
+
+        .page-wrapper {
+            box-sizing: border-box;
+            padding: 120px 20px 60px 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            text-align: center;
-            color: white;
-            padding: 0 20px;
         }
+
+        .main-frame {
+            width: 100%;
+            max-width: 850px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        .wedding-logo { width: 85px; margin-bottom: 20px; }
 
         .names {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(4rem, 14vw, 8rem);
-            color: var(--rose-signature);
-            margin: 0;
-            text-shadow: 2px 2px 15px rgba(0,0,0,0.6);
+            font-size: clamp(3.5rem, 12vw, 5.5rem);
+            color: var(--rose-prestige);
+            margin: 10px 0;
         }
 
-        .date-text {
+        .hero-photo, .section-photo {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+            margin: 30px 0;
+            border: 1px solid var(--line-color);
+            padding: 10px;
+            background: white;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+        }
+
+        .main-message {
+            max-width: 600px;
+            font-size: 1.5rem;
+            line-height: 1.6;
+            font-style: italic;
+            margin: 20px 0 50px 0;
+        }
+
+        /* Cards avec droite.JPG en fond */
+        .event-card {
+            background: white;
+            border: 1px solid var(--rose-prestige);
+            padding: 40px;
+            margin: 20px 0;
+            width: 100%;
+            max-width: 550px;
+            position: relative;
+            overflow: hidden;
+            background-image: url('droite.JPG');
+            background-repeat: no-repeat;
+            background-position: bottom right;
+            background-size: 180px;
+        }
+
+        .event-card::before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(255, 253, 249, 0.78);
+            z-index: 0;
+        }
+
+        .event-card > * { position: relative; z-index: 1; }
+
+        /* Formulaire */
+        .form-container {
+            width: 100%;
+            max-width: 500px;
+            margin-top: 20px;
+            text-align: left;
+            padding: 20px;
+        }
+
+        .form-group { margin-bottom: 20px; }
+
+        input, select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid var(--line-color);
+            background: white;
             font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(1.3rem, 5vw, 1.8rem);
-            letter-spacing: 6px;
-            text-transform: uppercase;
-            margin: 10px 0 40px 0;
-            font-weight: 700; /* Plus gras pour la visibilité */
-            color: #fff;
-            text-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+            font-size: 1rem;
         }
 
-        .countdown {
-            display: flex;
-            gap: clamp(12px, 4vw, 30px);
-            margin-bottom: 55px;
-            justify-content: center;
-        }
-
-        .unit {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background: var(--rose-pale);
-            border: 1px solid rgba(226, 180, 180, 0.5);
-            width: clamp(75px, 20vw, 100px);
-            height: clamp(75px, 20vw, 100px);
-            border-radius: 5px;
-            backdrop-filter: blur(6px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-        }
-
-        .unit span {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: clamp(1.8rem, 6vw, 2.6rem);
-            font-weight: 700;
-            line-height: 1;
-        }
-
-        .unit label {
-            font-size: 0.7rem;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            margin-top: 6px;
-            font-weight: 600; /* Plus gras */
-            opacity: 1; /* Pleine opacité */
-        }
-
-        .next-btn {
-            background: none;
-            border: 1px solid var(--white-soft);
+        .btn-rsvp {
+            background: var(--text-dark);
             color: white;
-            padding: 16px 55px;
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 1.1rem; /* Légèrement plus grand */
-            font-weight: 700; /* Plus gras */
-            letter-spacing: 5px;
+            border: none;
+            padding: 15px 40px;
+            width: 100%;
             text-transform: uppercase;
+            letter-spacing: 4px;
             cursor: pointer;
-            transition: all 0.4s ease;
-            border-radius: 2px;
-            backdrop-filter: blur(3px);
+            transition: 0.4s;
         }
 
-        .next-btn:hover {
-            background: var(--white-soft);
-            color: #000;
-            letter-spacing: 8px;
-            transform: translateY(-2px);
+        .btn-rsvp:hover { background: var(--rose-prestige); }
+
+        @media (max-width: 600px) {
+            .bg-flower-left, .bg-flower-right { opacity: 0.4; }
+            .event-card { padding: 30px 15px; background-size: 120px; }
         }
     </style>
 </head>
 <body>
 
-    <div class="background-hero"></div>
-    <div class="overlay"></div>
+<img src="doublefleur.JPG" class="bg-flower-left" alt="">
+<img src="fleur.JPG" class="bg-flower-right" alt="">
 
-    <div class="main-container">
+<nav class="navbar">
+    <ul class="nav-links">
+        <li><a href="#accueil">Accueil</a></li>
+        <li><a href="#mairie">Mairie</a></li>
+        <li><a href="#houppa">Houppa</a></li>
+        <li><a href="#rsvp">Présence</a></li>
+    </ul>
+</nav>
+
+<div class="page-wrapper" id="accueil">
+    <div class="main-frame">
+        <img src="logo.JPG" alt="Logo ES" class="wedding-logo">
         <h1 class="names">Eva & Samuel</h1>
-        <p class="date-text">12 Mai 2026</p>
 
-        <div class="countdown">
-            <div class="unit"><span id="days">00</span><label>Jours</label></div>
-            <div class="unit"><span id="hours">00</span><label>Heures</label></div>
-            <div class="unit"><span id="mins">00</span><label>Min</label></div>
-            <div class="unit"><span id="secs">00</span><label>Sec</label></div>
+        <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
+
+        <div class="main-message">
+            "C’est avec un immense bonheur et le cœur rempli de joie que nous vous invitons à célébrer notre union. Entourés de nos familles et de nos amis, nous avons hâte de partager ce moment unique."
         </div>
 
-        <button class="next-btn" onclick="nextStep()">Entrer</button>
+        <div class="event-card" id="mairie">
+            <div style="letter-spacing: 5px; text-transform: uppercase; margin-bottom: 15px;">La Mairie</div>
+            <div style="font-size: 1.5rem; font-style: italic; margin-bottom: 15px;">11 Mai 2026 à 14h30</div>
+            <p>Mairie du 16ème Arrondissement, Paris.</p>
+        </div>
+
+        <div class="event-card" id="houppa">
+            <div style="letter-spacing: 5px; text-transform: uppercase; margin-bottom: 15px;">La Houppa</div>
+            <div style="font-size: 1.5rem; font-style: italic; margin-bottom: 15px;">12 Mai 2026 à 17h00</div>
+            <p>Nous serions honorés de célébrer notre union sous la Houppa avec vous.</p>
+        </div>
+
+        <img src="verre.JPG" alt="Célébration" class="section-photo">
+
+        <div class="form-container" id="rsvp">
+            <h2 style="text-align: center; letter-spacing: 5px; text-transform: uppercase; margin-bottom: 30px;">Confirmer ma présence</h2>
+            <form>
+                <div class="form-group">
+                    <label style="display:block; letter-spacing:2px; font-size:0.8rem; margin-bottom:8px;">NOM & PRÉNOM</label>
+                    <input type="text" placeholder="Votre nom complet" required>
+                </div>
+                <div class="form-group">
+                    <label style="display:block; letter-spacing:2px; font-size:0.8rem; margin-bottom:8px;">SEREZ-VOUS PRÉSENT ?</label>
+                    <select required>
+                        <option value="oui">Oui, avec plaisir</option>
+                        <option value="non">Non, avec regret</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn-rsvp">Envoyer ma réponse</button>
+            </form>
+        </div>
     </div>
+</div>
 
-    <script>
-        // Cible mise à jour : 12 Mai 2026
-        const weddingDate = new Date("May 12, 2026 15:00:00").getTime();
-
-        function update() {
-            const now = new Date().getTime();
-            const diff = weddingDate - now;
-
-            if (diff <= 0) {
-                document.getElementById("days").innerText = "00";
-                document.getElementById("hours").innerText = "00";
-                document.getElementById("mins").innerText = "00";
-                document.getElementById("secs").innerText = "00";
-                return;
-            }
-
-            const d = Math.floor(diff / (1000 * 60 * 60 * 24));
-            const h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-            const s = Math.floor((diff % (1000 * 60)) / 1000);
-
-            document.getElementById("days").innerText = d.toString().padStart(2, '0');
-            document.getElementById("hours").innerText = h.toString().padStart(2, '0');
-            document.getElementById("mins").innerText = m.toString().padStart(2, '0');
-            document.getElementById("secs").innerText = s.toString().padStart(2, '0');
-        }
-
-        setInterval(update, 1000);
-        update();
-
-        function nextStep() {
-            document.querySelector('.main-container').style.opacity = '0';
-            document.querySelector('.main-container').style.transition = '0.8s';
-            setTimeout(() => {
-                alert("Ouverture de l'invitation...");
-            }, 800);
-        }
-    </script>
 </body>
 </html>
