--- a/invitation.html
+++ b/invitation.html
@@ -23,27 +23,27 @@
             font-family: 'Cormorant Garamond', serif;
             color: var(--text-dark);
             scroll-behavior: smooth;
-            overflow-x: hidden; /* Empêche le scroll horizontal sur mobile */
+            overflow-x: hidden;
         }
 
-        /* --- ÉLÉMENTS FLORAUX --- */
+        /* --- ÉLÉMENTS FLORAUX EN ARRIÈRE-PLAN --- */
         .bg-flower-left {
             position: fixed;
-            top: 0;
-            left: -20px;
-            width: 200px; /* Plus petit par défaut */
-            opacity: 0.5;
-            z-index: 2000;
+            top: -20px;
+            left: -40px;
+            width: clamp(120px, 25vw, 280px); /* Taille adaptative */
+            opacity: 0.4;
+            z-index: -1; /* Derrière le contenu */
             pointer-events: none;
         }
 
         .bg-flower-right {
             position: fixed;
-            bottom: 0;
-            right: -20px;
-            width: 220px;
-            opacity: 0.5;
-            z-index: 2000;
+            bottom: -20px;
+            right: -40px;
+            width: clamp(140px, 30vw, 320px); /* Taille adaptative */
+            opacity: 0.4;
+            z-index: -1; /* Derrière le contenu */
             pointer-events: none;
             transform: rotate(-10deg);
         }
@@ -54,18 +54,19 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 60px; /* Réduit pour mobile */
-            background-color: rgba(255, 253, 249, 0.98);
+            height: 65px;
+            background-color: rgba(255, 253, 249, 0.95);
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1500;
+            z-index: 1000;
             border-bottom: 1px solid var(--line-color);
+            backdrop-filter: blur(5px);
         }
 
         .nav-links {
             display: flex;
-            gap: 15px;
+            gap: clamp(10px, 4vw, 30px);
             list-style: none;
             margin: 0;
             padding: 0;
@@ -75,15 +76,17 @@
             text-decoration: none;
             color: var(--text-gray);
             text-transform: uppercase;
-            letter-spacing: 1px;
-            font-size: 0.65rem;
+            letter-spacing: 1.5px;
+            font-size: 0.7rem;
             transition: 0.3s;
         }
 
-        /* Conteneur */
+        .nav-links a:hover { color: var(--rose-prestige); }
+
+        /* Conteneur de Page */
         .page-wrapper {
             box-sizing: border-box;
-            padding: 80px 15px 40px 15px; /* Marges réduites mobile */
+            padding: 100px 20px 60px 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -91,47 +94,47 @@
 
         .main-frame {
             width: 100%;
-            max-width: 850px;
+            max-width: 800px;
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
         }
 
-        .wedding-logo { width: 70px; margin-bottom: 15px; }
+        .wedding-logo { width: clamp(60px, 10vw, 85px); margin-bottom: 15px; }
 
         .names {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(3rem, 10vw, 5.5rem);
+            font-size: clamp(3.2rem, 12vw, 5.5rem);
             color: var(--rose-prestige);
-            margin: 5px 0;
+            margin: 10px 0;
         }
 
         .hero-photo, .section-photo {
             width: 100%;
-            max-width: 500px;
+            max-width: 550px;
             height: auto;
-            margin: 20px 0;
+            margin: 25px 0;
             border: 1px solid var(--line-color);
-            padding: 8px;
+            padding: 10px;
             background: white;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
         }
 
         .main-message {
             max-width: 550px;
-            font-size: clamp(1.1rem, 4vw, 1.4rem);
-            line-height: 1.5;
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
+            line-height: 1.6;
             font-style: italic;
-            margin: 15px 0 40px 0;
-            padding: 0 10px;
+            margin: 20px 0 45px 0;
+            color: var(--text-dark);
         }
 
-        /* Cards */
+        /* Cards Mairie & Houppa */
         .event-card {
             background: white;
             border: 1px solid var(--rose-prestige);
-            padding: 30px 20px;
+            padding: clamp(25px, 5vw, 40px);
             margin: 15px 0;
             width: 100%;
             max-width: 500px;
@@ -140,14 +143,14 @@
             background-image: url('droite.JPG');
             background-repeat: no-repeat;
             background-position: bottom right;
-            background-size: 100px; /* Plus petit sur mobile */
+            background-size: clamp(80px, 15vw, 150px);
         }
 
         .event-card::before {
             content: '';
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(255, 253, 249, 0.85);
+            background: rgba(255, 253, 249, 0.88);
             z-index: 0;
         }
 
@@ -157,18 +160,29 @@
         .form-container {
             width: 100%;
             max-width: 500px;
-            margin-top: 20px;
+            margin-top: 30px;
             text-align: left;
         }
 
-        .form-group { margin-bottom: 15px; }
+        .form-group { margin-bottom: 20px; }
+
+        label {
+            display: block;
+            font-size: 0.75rem;
+            letter-spacing: 2px;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+            color: var(--text-gray);
+        }
 
         input, select, textarea {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             border: 1px solid var(--line-color);
+            background: white;
             font-family: 'Cormorant Garamond', serif;
             font-size: 1rem;
+            box-sizing: border-box;
             border-radius: 0;
         }
 
@@ -176,23 +190,22 @@
             background: var(--text-dark);
             color: white;
             border: none;
-            padding: 15px;
+            padding: 16px;
             width: 100%;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
+            font-weight: 600;
             cursor: pointer;
+            transition: 0.4s;
         }
 
-        /* AJUSTEMENTS ORDINATEUR */
-        @media (min-width: 768px) {
-            .navbar { height: 80px; }
-            .nav-links { gap: 30px; }
-            .nav-links a { font-size: 0.75rem; letter-spacing: 2px; }
-            .bg-flower-left { width: 300px; left: -50px; }
-            .bg-flower-right { width: 350px; right: -50px; }
-            .event-card { padding: 40px; background-size: 180px; }
-            .page-wrapper { padding: 120px 20px 60px 20px; }
-            .wedding-logo { width: 85px; }
+        .btn-rsvp:hover { background: var(--rose-prestige); }
+
+        /* Correction pour les tout petits écrans */
+        @media (max-width: 480px) {
+            .page-wrapper { padding-top: 85px; }
+            .nav-links { gap: 8px; }
+            .nav-links a { font-size: 0.6rem; letter-spacing: 1px; }
         }
     </style>
 </head>
@@ -222,34 +235,34 @@
         </div>
 
         <div class="event-card" id="mairie">
-            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 10px;">La Mairie</div>
-            <div style="font-size: 1.3rem; font-style: italic; margin-bottom: 10px;">11 Mai 2026 à 14h30</div>
-            <p style="margin: 0;">Mairie du 16ème, Paris.</p>
+            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 10px; color: var(--text-gray);">La Mairie</div>
+            <div style="font-size: 1.4rem; font-style: italic; margin-bottom: 10px;">11 Mai 2026 à 14h30</div>
+            <p style="margin: 0; opacity: 0.9;">Mairie du 16ème, Paris.</p>
         </div>
 
         <div class="event-card" id="houppa">
-            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 10px;">La Houppa</div>
-            <div style="font-size: 1.3rem; font-style: italic; margin-bottom: 10px;">12 Mai 2026 à 17h00</div>
-            <p style="margin: 0;">Célébration de notre union.</p>
+            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 10px; color: var(--text-gray);">La Houppa</div>
+            <div style="font-size: 1.4rem; font-style: italic; margin-bottom: 10px;">12 Mai 2026 à 17h00</div>
+            <p style="margin: 0; opacity: 0.9;">Célébration de notre union.</p>
         </div>
 
         <img src="verre.JPG" alt="Célébration" class="section-photo">
 
         <div class="form-container" id="rsvp">
-            <h2 style="text-align: center; letter-spacing: 3px; text-transform: uppercase; font-size: 1rem; margin-bottom: 25px;">Confirmer ma présence</h2>
+            <h2 style="text-align: center; letter-spacing: 3px; text-transform: uppercase; font-size: 1.1rem; margin-bottom: 30px;">Confirmer ma présence</h2>
             <form>
                 <div class="form-group">
-                    <label style="display:block; font-size:0.7rem; margin-bottom:5px; letter-spacing: 1px;">NOM & PRÉNOM</label>
+                    <label>Nom & Prénom</label>
                     <input type="text" placeholder="Votre nom complet" required>
                 </div>
                 <div class="form-group">
-                    <label style="display:block; font-size:0.7rem; margin-bottom:5px; letter-spacing: 1px;">PRÉSENCE</label>
+                    <label>Serez-vous présent ?</label>
                     <select required>
                         <option value="oui">Oui, avec plaisir</option>
                         <option value="non">Non, avec regret</option>
                     </select>
                 </div>
-                <button type="submit" class="btn-rsvp">Envoyer</button>
+                <button type="submit" class="btn-rsvp">Envoyer ma réponse</button>
             </form>
         </div>
     </div>
